# ray_tracing_demo

./: .clang-format  .gitignore  CMakeLists.txt  GlobalConfig.hpp  Makefile  README.md  main.cpp  run_cpp_test.sh  test.ppm  testMakefiles.txt
include/: CMakeLists.txt  Camera.hpp  EasyFileWriter.hpp  Ray.hpp  RenderAlgorithms.hpp  Renderer.hpp  Vec3.hpp
include/geometry/: IHittable.hpp  Ray.hpp  Sphere.hpp  Vec3.hpp
include/tests/: CMakeLists.txt  Vec3TestSuite.cpp
src/: Camera.cpp  Ray.cpp  Renderer.cpp
src/geometry/: Camera.cpp  Ray.cpp
